--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,9 +4,13 @@ bind r source-file ~/.tmux.conf
 
 # leader key
 set -g prefix C-f 
+unbind C-b
 
 # mouse on for resize panes
 set -g mouse on
+
+# terminal
+set -g default-terminal "alacritty"
 
 # pane navigation like vim
 bind-key h select-pane -L
@@ -23,7 +27,7 @@ set-option -g status-position top
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # theme plugins
 set -g @plugin 'catppuccin/tmux'
