--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,6 +34,9 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'jamesoff/tmux-loadavg'
 # set -g @plugin 'tmux-plugins/tmux-battery'
 
+# tmux-sessionizer
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+
 # status bar config
 # set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator "█ "
