--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -509,6 +509,7 @@ program = "/usr/bin/zsh"
 [window]
 opacity = 0.8
 title = "Alacritty"
+decorations = "None"
 
 [window.class]
 general = "Alacritty"
