--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,9 @@ set -g mouse on
 
 # terminal
 set -g default-terminal "alacritty"
+set-option -g default-terminal "screen-256color"
+set-option -a terminal-features 'XXX:RGB'
+
 
 # pane navigation like vim
 bind-key h select-pane -L
@@ -22,7 +25,7 @@ bind-key l select-pane -R
 bind C-l send-keys 'C-l'
 
 # status top
-set-option -g status-position top
+# set-option -g status-position top
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
