tmux config updated.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,9 +10,10 @@ unbind C-b
 set -g mouse on
 
 # terminal
-set -g default-terminal "alacritty"
+# set -g default-terminal "alacritty"
 set-option -g default-terminal "screen-256color"
 set-option -a terminal-features 'XXX:RGB'
+set-option -sa terminal-overrides ",*:Tc"
 
 
 # pane navigation like vim
@@ -33,39 +34,49 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # theme plugins
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin '2kabhishek/tmux2k'
 set -g @plugin 'jamesoff/tmux-loadavg'
-# set -g @plugin 'tmux-plugins/tmux-battery'
 
 # tmux-sessionizer
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-# status bar config
-# set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+# use a theme
+set -g @tmux2k-theme 'duo'
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+# to show icons only
+set -g @tmux2k-icons-only false
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
+# to customize duo bg and fg
+set -g @tmux2k-duo-fg "#5DE4C7"
+set -g @tmux2k-duo-bg "#303340"
 
-set -g @catppuccin_status_modules_right "directory date_time session"
-set -g @catppuccin_status_left_separator  "█"
-set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @catppuccin_date_time_text "%H:%M"
+# to not show powerline
+set -g @tmux2k-show-powerline false
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+# set start icon, accpets: `session`, 'window`, or any string
+set -g @tmux2k-start-icon ""
+
+# set the left and right plugin sections
+set -g @tmux2k-left-plugins "git window"
+set -g @tmux2k-right-plugins "window time"
+
+# to set window list alignment (centre by default)
+set -g @tmux2k-window-list-alignment 'left'
+
+# to customize plugin colors
+# set -g @tmux2k-[plugin-name]-colors "[background] [foreground]"
+# set -g @tmux2k-cpu-colors "red black" # set cpu plugin bg to red, fg to black
+
+# to enable compact window list size
+set -g @tmux2k-compact-windows true
+
+# change refresh rate
+set -g @tmux2k-refresh-rate 5
+
+
+# 24 hour time
+set -g @tmux2k-military-time true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
