--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -10,26 +10,45 @@ style = "Block"
 TERM = "xterm-256color"
 
 [font]
-size = 14.0
+size = 15.0
 
 [font.bold]
-family = "Fira Code"
+family = "MesloLGS NF"
 style = "Bold"
 
 [font.bold_italic]
-family = "Mononoki Nerd Font"
+family = "MesloLGS NF"
 style = "Bold Italic"
 
 [font.italic]
-family = "Menlo"
+family = "MesloLGS NF"
 style = "Italic"
 
 [font.normal]
 family = "MesloLGS NF"
+# family = "Hack Nerd Font"
+# family = "FiraCode Nerd Font Propo"
+style = "Regular"
 
 [font.offset]
-x = 1
-y = 1
+x = 0
+y = 0
+
+# [font.bold]
+# family = "Fira Code"
+# style = "Bold"
+#
+# [font.bold_italic]
+# family = "Mononoki Nerd Font"
+# style = "Bold Italic"
+#
+# [font.italic]
+# family = "Menlo"
+# style = "Italic"
+#
+# [font.normal]
+# family = "MesloLGS NF"
+
 
 [[keyboard.bindings]]
 action = "Paste"
