--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,14 +52,25 @@ set -g @tmux2k-duo-bg "#303340"
 
 
 # to not show powerline
-set -g @tmux2k-show-powerline false
+# set -g @tmux2k-show-powerline false
+
+# set -g status-left-length 50
+# set -g status-right-length 50
+
+set -g @tmux2k-right-sep ""
+set -g @tmux2k-left-sep ""
+
+# set -g @tmux2k-win-right-sep ""
+# set -g @tmux2k-win-left-sep ""
+set -g @tmux2k-win-right-sep " "
+set -g @tmux2k-win-left-sep " "
 
 # set start icon, accpets: `session`, 'window`, or any string
 set -g @tmux2k-start-icon ""
 
 # set the left and right plugin sections
-set -g @tmux2k-left-plugins "git window"
-set -g @tmux2k-right-plugins "window time"
+set -g @tmux2k-left-plugins "directory git window"
+set -g @tmux2k-right-plugins "tmux_session time"
 
 # to set window list alignment (centre by default)
 set -g @tmux2k-window-list-alignment 'left'
@@ -72,7 +83,7 @@ set -g @tmux2k-window-list-alignment 'left'
 set -g @tmux2k-compact-windows true
 
 # change refresh rate
-set -g @tmux2k-refresh-rate 5
+set -g @tmux2k-refresh-rate 2
 
 
 # 24 hour time
