tmux config updated.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,8 +57,12 @@ set -g @tmux2k-duo-bg "#303340"
 # set -g status-left-length 50
 # set -g status-right-length 50
 
-set -g @tmux2k-right-sep ""
-set -g @tmux2k-left-sep ""
+# set -g @tmux2k-right-sep ""
+# set -g @tmux2k-left-sep ""
+# set -g @tmux2k-right-sep "░▒▓"
+# set -g @tmux2k-left-sep "▓▒░"
+set -g @tmux2k-right-sep "\uE0BA"
+set -g @tmux2k-left-sep "\uE0BC"
 
 # set -g @tmux2k-win-right-sep ""
 # set -g @tmux2k-win-left-sep ""
