font increase keybind added(finally).

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -15,4 +15,5 @@ window-decoration = false
 confirm-close-surface = false
 
 keybind = ctrl+alt+v=toggle_tab_overview
+keybind = ctrl+four=increase_font_size:1
 
