--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -89,6 +89,14 @@ set -g @tmux2k-compact-windows true
 # change refresh rate
 set -g @tmux2k-refresh-rate 2
 
+unbind s
+bind s split-window -h -c "#{pane_current_path}"
+
+unbind v
+bind v split-window -v -c "#{pane_current_path}"
+
+unbind c
+bind c new-window -c "#{pane_current_path}"
 
 # 24 hour time
 set -g @tmux2k-military-time true
