tmux conf updated.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,6 @@ unbind C-b
 set -g mouse on
 
 # terminal
-# set -g default-terminal "alacritty"
 set-option -g default-terminal "screen-256color"
 set-option -a terminal-features 'XXX:RGB'
 set-option -sa terminal-overrides ",*:Tc"
@@ -26,6 +25,9 @@ bind-key l select-pane -R
 # C-l clear the screen
 bind C-l send-keys 'C-l'
 
+# kill session
+bind Q kill-session
+
 # status top
 # set-option -g status-position top
 
@@ -33,62 +35,77 @@ bind C-l send-keys 'C-l'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
+# set -g @plugin 'sainnhe/tmux-fzf'
+# TMUX_FZF_LAUNCH_KEY="C-o"
+set -g @plugin 'vndmp4/tmux-fzf-session-switch'
+set -g @fzf-goto-session 'C-o'
+set -g @fzf-goto-preview-enabled 'true'
 
 # theme plugins
-set -g @plugin '2kabhishek/tmux2k'
-set -g @plugin 'jamesoff/tmux-loadavg'
+set -g @plugin 'niksingh710/minimal-tmux-status'
+
+# set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
+# set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
+set-option -g status-interval 1
+
+set-option -g automatic-rename on
+# set-option -g automatic-rename-format '#{pane_current_command}'
+# set-option -g automatic-rename-format "#(ps -f --no-headers --ppid $(tmux display-message -p #{pane_pid}) | awk '{ print substr($0, index($0,$8)) }') "
+set-option -g history-limit 3000
+
+# These are the default values used inside the plugin to achieve the preview shown above.
+set -g @minimal-tmux-fg "#5DE4C7"
+set -g @minimal-tmux-bg "#303340"
+# set -g @minimal-tmux-fg "#000000"
+# set -g @minimal-tmux-bg "#698DDA"
+set -g @minimal-tmux-justify "centre"
+set -g @minimal-tmux-indicator-str "  tmux "
+# set -g @minimal-tmux-indicator-str " #[fg=#5DE4C7] tmux "
+set -g @minimal-tmux-indicator true
+set -g @minimal-tmux-status "bottom"
+
+# Enables or disables the left and right status bar
+set -g @minimal-tmux-right true
+set -g @minimal-tmux-left true
+
+# expanded icon (fullscreen icon)
+set -g @minimal-tmux-expanded-icon "󰊓 "
+
+# on all tabs (default is false)
+# false will make it visible for the current tab only
+set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
+
+# To add or remove extra text in status bar
+set -g @minimal-tmux-status-right-extra ""
+set -g @minimal-tmux-status-left-extra ""
+
+# To make the selection box rounded () or edged <>
+# Default is nothing, when set to true default is edged
+set -g @minimal-tmux-use-arrow true
+set -g @minimal-tmux-right-arrow ""
+set -g @minimal-tmux-left-arrow ""
+# set -g @minimal-tmux-right-arrow ""
+# set -g @minimal-tmux-left-arrow ""
+
+set -g @minimal-tmux-status-right " #[bold]#S #[fg=#5DE4C7]● #[default]%H:%M"
+#[fg=renk,bg=renk,bold]
+# "#[fg=green]#S #[fg=cyan]%H:%M"
+#S	Session adı
+#I	Pencere (window) numarası
+#W	Pencere ismi
+#P	Panel numarası
+#H	Hostname
+#h	Kısa hostname
+#T	Panel başlığı
+# %H:%M	Saat (örneğin 14:30)
+# %d-%m-%Y	Tarih
+#(komut)	Shell komutu çalıştır ve çıktısını yaz
+
 
 # tmux-sessionizer
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-
-# use a theme
-set -g @tmux2k-theme 'duo'
-
-# to show icons only
-set -g @tmux2k-icons-only false
-
-# to customize duo bg and fg
-set -g @tmux2k-duo-fg "#5DE4C7"
-set -g @tmux2k-duo-bg "#303340"
-
-
-# to not show powerline
-# set -g @tmux2k-show-powerline false
-
-# set -g status-left-length 50
-# set -g status-right-length 50
-
-# set -g @tmux2k-right-sep ""
-# set -g @tmux2k-left-sep ""
-# set -g @tmux2k-right-sep "░▒▓"
-# set -g @tmux2k-left-sep "▓▒░"
-set -g @tmux2k-right-sep "\uE0BA"
-set -g @tmux2k-left-sep "\uE0BC"
-
-# set -g @tmux2k-win-right-sep ""
-# set -g @tmux2k-win-left-sep ""
-set -g @tmux2k-win-right-sep " "
-set -g @tmux2k-win-left-sep " "
-
-# set start icon, accpets: `session`, 'window`, or any string
-set -g @tmux2k-start-icon ""
-
-# set the left and right plugin sections
-set -g @tmux2k-left-plugins "directory git window"
-set -g @tmux2k-right-plugins "tmux_session time"
-
-# to set window list alignment (centre by default)
-set -g @tmux2k-window-list-alignment 'left'
-
-# to customize plugin colors
-# set -g @tmux2k-[plugin-name]-colors "[background] [foreground]"
-# set -g @tmux2k-cpu-colors "red black" # set cpu plugin bg to red, fg to black
-
-# to enable compact window list size
-set -g @tmux2k-compact-windows true
-
-# change refresh rate
-set -g @tmux2k-refresh-rate 2
 
 unbind s
 bind s split-window -h -c "#{pane_current_path}"
@@ -99,8 +116,6 @@ bind v split-window -v -c "#{pane_current_path}"
 unbind c
 bind c new-window -c "#{pane_current_path}"
 
-# 24 hour time
-set -g @tmux2k-military-time true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
