tmux conf file updated.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -81,15 +81,21 @@ set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
 set -g @minimal-tmux-status-right-extra ""
 set -g @minimal-tmux-status-left-extra ""
 
+# set -g @minimal-tmux-status-left-extra " | #(pwd)"
+# set -g @minimal-tmux-status-left-extra " #{pane_current_path}"
+
 # To make the selection box rounded () or edged <>
 # Default is nothing, when set to true default is edged
 set -g @minimal-tmux-use-arrow true
-set -g @minimal-tmux-right-arrow ""
+# set -g @minimal-tmux-right-arrow ""
 set -g @minimal-tmux-left-arrow ""
 # set -g @minimal-tmux-right-arrow ""
 # set -g @minimal-tmux-left-arrow ""
 
-set -g @minimal-tmux-status-right " #[bold]#S #[fg=#5DE4C7]● #[default]%H:%M"
+
+set -g @minimal-tmux-status-right '#{=|-32:#{s|^/home/emre|~|:pane_current_path}} #[fg=#5DE4C7]● #[bold]#S'
+# set -g @minimal-tmux-status-right '#{=|-32:#{s|^#{env:HOME}|~|:pane_current_path}} #[fg=#5DE4C7]● #[bold]#S'
+# set -g @minimal-tmux-status-right " #[bold]#S #[fg=#5DE4C7]● #[default]#{pane_current_path} #[fg=#5DE4C7]● #[default]%H:%M"
 #[fg=renk,bg=renk,bold]
 # "#[fg=green]#S #[fg=cyan]%H:%M"
 #S	Session adı
