mini.nvim config,tmux,ghostty configs updated.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,9 +39,13 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-nvim 'session'
 # set -g @plugin 'sainnhe/tmux-fzf'
 # TMUX_FZF_LAUNCH_KEY="C-o"
-set -g @plugin 'vndmp4/tmux-fzf-session-switch'
-set -g @fzf-goto-session 'C-o'
-set -g @fzf-goto-preview-enabled 'true'
+# set -g @plugin 'vndmp4/tmux-fzf-session-switch'
+# set -g @fzf-goto-session 'C-o'
+# set -g @fzf-goto-preview-enabled 'true'
+set -g @plugin 'omerxx/tmux-sessionx'
+set -g @sessionx-fzf-builtin-tmux 'off'
+# set -g @sessionx-custom-paths '~/dev,~/dotfiles,~/.config'
+
 
 # theme plugins
 set -g @plugin 'niksingh710/minimal-tmux-status'
