--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,10 @@
 theme = GruvboxDarkHard
 
-font-family = MesloLGS NF
+# font-family = MesloLGS NF
+font-family = Terminess Nerd Font Mono Bold
+font-family-bold = Terminess Nerd Font Mono Bold
+font-family-italic = Terminess Nerd Font Mono Italic
+font-family-bold-italic = Terminess Nerd Font Mono Bold Italic
 font-size = 15.0
 
 cursor-style = block_hollow
