--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,19 +1,24 @@
-theme = GruvboxDarkHard
+theme = "/home/emre/.config/ghostty/nordic"
+# theme = "/home/emre/.config/ghostty/kanso-zen"
+# theme = "/home/emre/.config/ghostty/kanzo-ink"
+# theme = GruvboxDarkHard
 
 # font-family = MesloLGS NF
-font-family = Terminess Nerd Font Mono Bold
-font-family-bold = Terminess Nerd Font Mono Bold
-font-family-italic = Terminess Nerd Font Mono Italic
-font-family-bold-italic = Terminess Nerd Font Mono Bold Italic
-font-size = 15.0
+# font-family = Agave Bold
+font-family = Martian Mono sWd Bd
+# font-family-bold = Terminess Nerd Font Propo Bold
+# font-family-italic = Terminess Nerd Font Propo Italic
+# font-family-bold-italic = Terminess Nerd Font Bold Propo Italic
+font-size = 14.0
 
 cursor-style = block_hollow
 cursor-style-blink = true
 
 shell-integration = zsh
 
-background-opacity = 0.7
-
+background-opacity = 0.8
+# background-opacity = 1.0
+background-blur-radius = true
 window-decoration = false
 
 confirm-close-surface = false
