--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -117,14 +117,14 @@ set -g @minimal-tmux-status-right '#{=|-32:#{s|^/home/emre|~|:pane_current_path}
 # tmux-sessionizer
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-unbind s
-bind s split-window -h -c "#{pane_current_path}"
-
-unbind v
-bind v split-window -v -c "#{pane_current_path}"
-
-unbind c
-bind c new-window -c "#{pane_current_path}"
+# unbind s
+# bind s split-window -h -c "#{pane_current_path}"
+#
+# unbind v
+# bind v split-window -v -c "#{pane_current_path}"
+#
+# unbind c
+# bind c new-window -c "#{pane_current_path}"
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
