tmux-cht.sh and some scirpts added.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -117,6 +117,14 @@ set -g @minimal-tmux-status-right '#{=|-32:#{s|^/home/emre|~|:pane_current_path}
 # tmux-sessionizer
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
+# cht.sh
+bind-key -r i run-shell "tmux neww tmux-cht.sh"
+
+# tmux vi mode <prefix>-[
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # unbind s
 # bind s split-window -h -c "#{pane_current_path}"
 #
