--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -4,13 +4,16 @@ theme = "/home/emre/.config/ghostty/nordic"
 # theme = "/home/emre/.config/ghostty/kanzo-ink"
 # theme = GruvboxDarkHard
 
+# font-family = Mensch
+font-family = Terminess Nerd Font Mono Bold
+# font-family = xos4 Terminess Powerline
+# font-family = Martian Mono sWd Bd
+# font-family = Misc Tamsyn Bold
 # font-family = MesloLGS NF
 # font-family = Agave Bold
-font-family = Martian Mono sWd Bd
-# font-family-bold = Terminess Nerd Font Propo Bold
-# font-family-italic = Terminess Nerd Font Propo Italic
-# font-family-bold-italic = Terminess Nerd Font Bold Propo Italic
-font-size = 14.0
+# font-family = JetBrainsMono Nerd Font
+# font-family = Terminess Nerd Font Propo Bold
+font-size = 12.0
 
 cursor-style = block_hollow
 cursor-style-blink = true
